--- a/index.html
+++ b/index.html
@@ -6,254 +6,273 @@
   <title>getITfixed | Tech Help You Can Trust</title>
   <link href="https://fonts.googleapis.com/css?family=Inter:400,600&display=swap" rel="stylesheet">
   <style>
-body {
-  font-family: 'Inter', sans-serif;
-  margin: 0;
-  background: #f6f8fa;
-  color: #1a1a1a;
-}
-/* Header/Nav */
-.header {
-  background: #222831;
-  color: #fff;
-  box-shadow: 0 2px 8px #0002;
-  padding: 0;
-  position: sticky; top: 0; z-index: 10;
-}
-.logo {
-  font-weight: 700;
-  font-size: 1.6rem;
-  letter-spacing: 1px;
-}
-.nav {
-  display: flex; justify-content: space-between; align-items: center;
-  padding: 1rem 2vw; max-width: 1160px; margin: 0 auto;
-}
-.nav-links a {
-  color: #fff;
-  text-decoration: none;
-  margin: 0 .8rem;
-  font-weight: 500;
-  opacity: 0.87;
-  transition: color 0.2s;
-}
-.nav-links a.active, .nav-links a:hover {
-  color: #21a1ff;
-}
-.call-btn {
-  background: #21a1ff;
-  color: #fff;
-  padding: .6em 1.4em;
-  border-radius: 24px;
-  font-weight: 600;
-  text-decoration: none;
-  margin-left: 1em;
-  transition: background 0.2s;
-}
-.call-btn:hover { background: #1d8ddd; }
-/* Hero */
-.hero {
-  background: #fff;
-  text-align: center;
-  padding: 3.5rem 2vw 2rem 2vw;
-  box-shadow: 0 2px 10px #0001;
-}
-.hero h1 {
-  font-size: 2.3rem;
-  margin-bottom: .5rem;
-  font-weight: 700;
-}
-.subtitle {
-  color: #222831aa;
-  font-size: 1.17rem;
-  margin-bottom: 1.5rem;
-  max-width: 500px;
-  margin-left: auto; margin-right: auto;
-}
-.cta-btn {
-  background: #21a1ff;
-  color: #fff;
-  padding: .7em 2.5em;
-  border-radius: 30px;
-  font-size: 1.13rem;
-  font-weight: 600;
-  text-decoration: none;
-  transition: background 0.2s;
-  display: inline-block;
-}
-.cta-btn:hover { background: #1d8ddd; }
-/* Features */
-.feature-cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2vw;
-  margin: 2rem auto 2.5rem auto;
-  max-width: 900px;
-}
-.feature-card {
-  background: #fff;
-  border-radius: 13px;
-  box-shadow: 0 2px 14px #00000013;
-  padding: 2rem 1.5rem;
-  width: 260px;
-  display: flex; flex-direction: column; align-items: center;
-  text-align: center;
-  margin-bottom: 1rem;
-  transition: box-shadow 0.25s;
-}
-.feature-card .icon {
-  font-size: 2rem;
-  margin-bottom: .8rem;
-}
-.feature-card:hover { box-shadow: 0 4px 25px #21a1ff22; }
-.feature-card h3 { margin: 0 0 .5rem 0; font-weight: 600; }
-/* Reviews Preview */
-.reviews-preview {
-  background: #f4f8ff;
-  padding: 2rem 2vw 1.3rem 2vw;
-  text-align: center;
-}
-.reviews-preview h2 {
-  font-size: 1.5rem; font-weight: 700; margin-bottom: 0.9rem;
-}
-.reviews-row {
-  display: flex; 
-  flex-wrap: wrap; 
-  justify-content: center;
-  gap: 1rem;
-  margin-bottom: 1rem;
-}
-.review-card {
-  background: #fff;
-  border-radius: 11px;
-  box-shadow: 0 2px 10px #22283118;
-  min-width: 230px;
-  max-width: 300px;
-  display: block;
-  padding: 1.2rem 1rem;
-  text-align: left;
-  color: #1a1a1a;
-  text-decoration: none;
-  transition: box-shadow 0.23s, background 0.13s;
-  margin-bottom: 1rem;
-}
-.review-card:hover {
-  box-shadow: 0 6px 20px #21a1ff2a;
-  background: #e8f3ff;
-}
-.reviewer-name { font-weight: 600; margin-right: .4em; }
-.stars { color: #faad3d; font-size: 1rem; }
-.more-reviews-link {
-  color: #21a1ff;
-  text-decoration: underline;
-  font-weight: 500;
-  font-size: 1rem;
-}
-/* Footer */
-.footer {
-  background: #222831;
-  color: #fff;
-  text-align: center;
-  padding: 1.2rem 0 .9rem;
-  font-size: 1rem;
-  position: fixed; left: 0; right: 0; bottom: 0;
-  opacity: .95;
-  z-index: 8;
-}
-.footer a { color: #21a1ff; text-decoration: underline; }
-/* Responsiveness */
-@media (max-width: 840px) {
-  .feature-cards, .reviews-row { flex-direction: column; gap: 1.2rem; }
-  .feature-card, .review-card { min-width: unset; width: 95%; margin-left: auto; margin-right: auto;}
-}
-@media (max-width: 600px) {
-  .nav, .hero, .feature-cards, .reviews-preview {
-    padding-left: 4vw;
-    padding-right: 4vw;
-  }
-  .logo { font-size: 1.1rem; }
-  .hero h1 { font-size: 1.37rem; }
-  .cta-btn { font-size: 1rem; padding: .65em 2em; }
-  .footer { font-size: 0.83rem; }
-}
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0; background: #ecf0f4;
+      color: #20222b;
+    }
+    .nav {
+      background: #161921f2;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 68px;
+      box-shadow: 0 1px 8px #0002;
+      position: sticky; top: 0; z-index: 10;
+    }
+    .nav .logo {
+      font-weight: 700; font-size: 1.5rem; letter-spacing: 1px; 
+      margin-right: 2.7vw;
+    }
+    .nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 1.07rem;
+      margin: 0 1.3vw;
+      transition: color .18s;
+      opacity: 0.9;
+    }
+    .nav a.active, .nav a:hover { color: #00A3FF; opacity: 1; }
+    .call-btn {
+      background: #00A3FF;
+      color: #fff;
+      padding: .58em 1.38em;
+      border-radius: 100vw;
+      font-weight: 600;
+      margin-left: 2vw;
+      text-decoration: none;
+      font-size: 1.07rem;
+      box-shadow: 0 4px 24px #00a3ff36;
+      transition: background .18s;
+    }
+    .call-btn:hover { background: #0182cb; }
+
+    /* Hero */
+    .hero-bg {
+      background: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?fit=crop&w=1200&q=80') center center/cover no-repeat;
+      min-height: 370px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding-top: 54px;
+    }
+    .hero {
+      background: rgba(255,255,255,0.76);
+      border-radius: 42px;
+      box-shadow: 0 8px 36px #16192128;
+      max-width: 460px;
+      width: 96vw;
+      margin: 0 auto;
+      display: flex; flex-direction: column; align-items: center;
+      padding: 2.7rem 2.1rem 2.5rem 2.1rem;
+      text-align: center;
+      backdrop-filter: blur(7px);
+      border: 2px solid #fff3;
+      /* Glass effect */
+    }
+    .hero h1 {
+      font-size: 2.25rem; font-weight: 700;
+      color: #1a2c41;
+      margin-bottom: .7rem;
+      letter-spacing: -.7px;
+      text-shadow: 0 2px 14px #fff5;
+    }
+    .hero .subtitle {
+      color: #3c5280cc;
+      font-size: 1.22rem;
+      margin-bottom: 1.6rem;
+      max-width: 320px;
+    }
+    .hero .cta-btn {
+      background: #00A3FF;
+      color: #fff;
+      border: none;
+      border-radius: 999px;
+      padding: .78em 2.2em;
+      font-size: 1.17rem;
+      font-weight: 600;
+      text-decoration: none;
+      letter-spacing: .02em;
+      box-shadow: 0 4px 24px #00a3ff41;
+      transition: background .18s;
+      margin-top: .2rem;
+      margin-bottom: .2rem;
+    }
+    .hero .cta-btn:hover { background: #0182cb; }
+
+    /* Service Cards */
+    .section {
+      max-width: 960px;
+      margin: 3rem auto 0 auto;
+      padding: 0 2vw;
+    }
+    .section h2 {
+      font-size: 1.41rem;
+      font-weight: 700;
+      letter-spacing: -.3px;
+      color: #0c2040;
+      margin-bottom: 1.2rem;
+      text-align: center;
+    }
+    .cards {
+      display: flex;
+      gap: 1.2rem;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-bottom: 2.2rem;
+    }
+    .card {
+      background: #fff;
+      border-radius: 26px;
+      box-shadow: 0 2px 18px #25315111;
+      padding: 1.44rem 1.2rem;
+      width: 246px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-bottom: .8rem;
+      transition: box-shadow .22s;
+      border: 1px solid #e2edf8;
+      min-height: 159px;
+    }
+    .card:hover { box-shadow: 0 8px 32px #00a3ff11; }
+    .card .icon {
+      font-size: 2.2rem;
+      color: #00A3FF;
+      margin-bottom: .5rem;
+    }
+    .card h3 { margin: 0; font-size: 1.14rem; font-weight: 600; color: #182042; margin-bottom: .32rem; }
+    .card p { margin: 0; color: #2f3a4e; font-size: 1.03rem; opacity: 0.93; }
+
+    /* Reviews */
+    .reviews-section .cards { margin-bottom: 1.1rem; }
+    .review-card {
+      background: #f9fbff;
+      border-radius: 24px;
+      box-shadow: 0 2px 14px #1b395120;
+      padding: 1.05rem 1rem;
+      min-width: 200px;
+      max-width: 300px;
+      text-align: left;
+      color: #1a1a1a;
+      text-decoration: none;
+      transition: box-shadow .17s, background .11s;
+      border: 1.5px solid #e3ecef;
+      display: block;
+    }
+    .review-card:hover {
+      box-shadow: 0 6px 24px #21237a25;
+      background: #e5f4ff;
+    }
+    .reviewer-name { font-weight: 600; }
+    .stars { color: #00A3FF; font-size: 1rem; margin-left: .31em; }
+    .more-reviews-link {
+      color: #00A3FF;
+      text-decoration: underline;
+      font-weight: 500;
+      font-size: 1rem;
+      display: inline-block;
+      text-align: center;
+      margin: .7rem auto 0 auto;
+      cursor: pointer;
+    }
+    /* Footer */
+    .footer {
+      background: #161921f2;
+      color: #fff;
+      text-align: center;
+      padding: 1.0rem 0 .8rem;
+      font-size: 1rem;
+      width: 100vw;
+      margin-top: 3rem;
+      opacity: .97;
+    }
+    .footer a { color: #00A3FF; text-decoration: underline; }
+    /* Responsiveness */
+    @media (max-width: 900px) {
+      .cards { flex-direction: column; align-items: center; }
+      .card, .review-card { width: 97%; max-width: 340px; }
+    }
+    @media (max-width: 600px) {
+      .hero-bg { min-height: 230px; }
+      .hero {
+        padding: 1.3rem .7rem 1.3rem .7rem;
+        border-radius: 19px;
+      }
+      .hero h1 { font-size: 1.34rem; }
+      .hero .subtitle { font-size: 1.01rem; }
+      .cta-btn { font-size: 1rem; padding: .65em 2em; }
+      .card h3 { font-size: 1.01rem; }
+      .card p { font-size: .97rem; }
+      .section h2 { font-size: 1.01rem; }
+    }
   </style>
 </head>
 <body>
-  <!-- Header + Navigation -->
-  <header class="header">
-    <nav class="nav">
-      <span class="logo">getITfixed</span>
-      <div class="nav-links">
-        <a href="index.html" class="active">Home</a>
-        <a href="services.html">Services</a>
-        <a href="reviews.html">Reviews</a>
-      </div>
-      <a href="tel:YOUR_NUMBER" class="call-btn">Call Now</a>
-    </nav>
-  </header>
-
-  <!-- Hero Section -->
-  <main>
-    <section class="hero">
+  <nav class="nav">
+    <span class="logo">getITfixed</span>
+    <a href="index.html" class="active">Home</a>
+    <a href="services.html">Services</a>
+    <a href="reviews.html">Reviews</a>
+    <a href="tel:YOUR_NUMBER" class="call-btn">Call Now</a>
+  </nav>
+  <div class="hero-bg">
+    <div class="hero">
       <h1>Tech Help You Can Trust</h1>
-      <p class="subtitle">Easy, friendly, and dependable IT support for your home or small business—specializing in seniors.</p>
+      <div class="subtitle">Professional, fast, and friendly IT support for home and business. <br>Specializing in senior tech help.</div>
       <a href="tel:YOUR_NUMBER" class="cta-btn">Call Now for Help</a>
-    </section>
-
-    <!-- Feature Highlights -->
-    <section class="feature-cards">
-      <div class="feature-card">
-        <span class="icon">&#128241;</span>
-        <h3>In-Home & Remote IT</h3>
-        <p>We come to you or help by phone—no confusing tech talk.</p>
+    </div>
+  </div>
+  <div class="section">
+    <h2>Our Services</h2>
+    <div class="cards">
+      <div class="card">
+        <div class="icon">&#128187;</div>
+        <h3>Computer Upgrades</h3>
+        <p>Speed up slow PCs, install new hardware, or transfer data safely.</p>
       </div>
-      <div class="feature-card">
-        <span class="icon">&#128274;</span>
-        <h3>Security & Wi-Fi Experts</h3>
-        <p>Get your cameras, Wi-Fi, and smart devices running safely and smoothly.</p>
+      <div class="card">
+        <div class="icon">&#128246;</div>
+        <h3>Wi-Fi & Network Setup</h3>
+        <p>Fast, secure Wi-Fi setup and troubleshooting throughout your home.</p>
       </div>
-      <div class="feature-card">
-        <span class="icon">&#11088;</span>
-        <h3>Trusted by Your Neighbors</h3>
-        <p>5-star service, backed by real testimonials and local experience.</p>
+      <div class="card">
+        <div class="icon">&#128272;</div>
+        <h3>Security Camera Installation</h3>
+        <p>Professional, discrete security camera and smart home device setup.</p>
       </div>
-    </section>
-
-    <!-- Reviews Preview -->
-    <section class="reviews-preview">
-      <h2>What Our Clients Say</h2>
-      <div class="reviews-row">
-        <a href="https://g.co/kgs/XCHEhM4" class="review-card" target="_blank" rel="noopener">
-          <div>
-            <span class="reviewer-name">Antonio Gonzalez</span>
-            <span class="stars">★★★★★</span>
-            <p>Fixed my office printer quickly! Great service.</p>
-          </div>
-        </a>
-        <a href="https://g.co/kgs/Fy9Vupa" class="review-card" target="_blank" rel="noopener">
-          <div>
-            <span class="reviewer-name">Analeigha Q.-Zavala</span>
-            <span class="stars">★★★★★</span>
-            <p>My laptop was so slow—he explained everything clearly and fixed it fast.</p>
-          </div>
-        </a>
-        <a href="https://g.co/kgs/Vut4gsG" class="review-card" target="_blank" rel="noopener">
-          <div>
-            <span class="reviewer-name">Annie M</span>
-            <span class="stars">★★★★★</span>
-            <p>PC repair and helped with my “husky rescue”—so patient and friendly!</p>
-          </div>
-        </a>
+      <div class="card">
+        <div class="icon">&#128222;</div>
+        <h3>Phone Help & More</h3>
+        <p>iPhone or Android help, printer fixes, and general troubleshooting.</p>
       </div>
-      <a href="reviews.html" class="more-reviews-link">See all reviews</a>
-    </section>
-  </main>
-  <!-- Fixed Professional Footer -->
+    </div>
+  </div>
+  <div class="section reviews-section">
+    <h2>Client Reviews</h2>
+    <div class="cards">
+      <a href="https://g.co/kgs/XCHEhM4" class="review-card" target="_blank" rel="noopener">
+        <span class="reviewer-name">Antonio Gonzalez</span> 
+        <span class="stars">★★★★★</span>
+        <p>Fixed my office printer quickly! Great service.</p>
+      </a>
+      <a href="https://g.co/kgs/Fy9Vupa" class="review-card" target="_blank" rel="noopener">
+        <span class="reviewer-name">Analeigha Q.-Zavala</span> 
+        <span class="stars">★★★★★</span>
+        <p>My laptop was so slow—explained everything and fixed it fast.</p>
+      </a>
+      <a href="https://g.co/kgs/Vut4gsG" class="review-card" target="_blank" rel="noopener">
+        <span class="reviewer-name">Annie M</span> 
+        <span class="stars">★★★★★</span>
+        <p>PC repair and helped with my husky rescue—super patient and friendly!</p>
+      </a>
+    </div>
+    <a href="reviews.html" class="more-reviews-link">See all reviews</a>
+  </div>
   <footer class="footer">
-    <span>&copy; 2025 getITfixed • Local, Trusted IT Help | <a href="tel:YOUR_NUMBER">Call (YOUR_NUMBER)</a></span>
+    &copy; 2025 getITfixed • Local, Trusted IT Help | <a href="tel:YOUR_NUMBER">Call (YOUR_NUMBER)</a>
   </footer>
 </body>
 </html>
-
-
