--- a/index.html
+++ b/index.html
@@ -511,10 +511,10 @@
   <nav class="navbar">
     <div class="logo">getITfixed</div>
     <ul class="nav-links">
-      <li><a href="#" class="active">Home</a></li>
-      <li><a href="#">Services</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="services.html">Services</a></li>
       <li><a href="#">About</a></li>
-      <li><a href="#">Testimonials</a></li>
+      <li><a href="reviews.html">Testimonials</a></li>
       <li><a href="#">Blog</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
@@ -635,10 +635,10 @@
       <div class="footer-section">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Testimonials</a></li>
+          <li><a href="reviews.html">Testimonials</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
