--- a/index.html
+++ b/index.html
@@ -88,124 +88,65 @@
       color: #fff;
     }
 
-    .hero {
-      background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 5vw 2vw 4vw 2vw;
-      min-height: 85vh;
-      text-align: center;
-    }
-    .hero-container {
-      width: 100%;
+    section {
       max-width: var(--max-width);
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 2.5rem;
+      margin: 4rem auto;
+      padding: 0 1rem;
     }
-    .hero-content {
-      max-width: 540px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 3.4rem;
-      font-weight: 700;
-      line-height: 1.1;
-      margin-bottom: 1.1rem;
-      color: var(--dark);
-      letter-spacing: -0.7px;
-    }
-    .hero-subtitle {
-      color: var(--accent);
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin-bottom: 1.2rem;
-    }
-    .hero-description {
-      font-size: 1.13rem;
-      color: #495057;
-      margin-bottom: 2rem;
-      font-weight: 400;
-      max-width: 420px;
-    }
-    .hero-buttons {
-      display: flex;
-      gap: 1.2rem;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin-bottom: 1.7rem;
-    }
-    .btn-primary, .btn-secondary {
-      border-radius: 8px;
-      font-size: 1.1rem;
-      font-weight: 600;
-      padding: 0.85rem 2.3rem;
-      transition: background 0.18s, color 0.16s, transform 0.17s;
-      border: none;
-      cursor: pointer;
-      outline: none;
-      display: inline-block;
-    }
-    .btn-primary {
-      background: var(--accent);
-      color: var(--dark);
-    }
-    .btn-primary:hover { background: #6bc419; color: #fff; transform: translateY(-1.5px);}
-    .btn-secondary {
-      background: none;
-      color: var(--accent);
-      border: 2px solid var(--accent);
-    }
-    .btn-secondary:hover { background: var(--accent); color: #fff; }
-    .hero-cards {
-      display: flex;
-      gap: 1.2rem;
-      flex-wrap: wrap;
-      justify-content: center;
-      width: 100%;
-      margin-top: 1rem;
-    }
-    .hero-card {
-      background: #fff;
-      border: 1px solid #e3e9ef;
+
+    .why-choose {
+      background-color: var(--gray-bg);
       border-radius: var(--card-radius);
-      width: 320px;
-      box-shadow: 0 2px 10px rgba(126,211,33,0.08), 0 3px 24px #00000007;
-      padding: 1.5rem 1.2rem 2rem 1.2rem;
-      transition: transform 0.19s, box-shadow 0.21s;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      padding: 2rem;
     }
-    .hero-card img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 10px;
+    .why-choose h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: var(--dark);
+    }
+    .why-choose ul {
+      list-style: disc;
+      padding-left: 1.5rem;
+    }
+    .why-choose li {
+      margin-bottom: 0.75rem;
+      font-size: 1.1rem;
+    }
+
+    .cta {
+      text-align: center;
+      padding: 3rem 1rem;
+      background: var(--accent);
+      color: #fff;
+      border-radius: var(--card-radius);
+    }
+    .cta h2 {
+      font-size: 2rem;
       margin-bottom: 1rem;
     }
-    .hero-card h3 {
-      font-size: 1.13rem;
-      font-weight: 600;
-      margin-bottom: 0.6rem;
+    .cta a {
+      background: #fff;
       color: var(--dark);
+      font-weight: 600;
+      padding: 0.75rem 2rem;
+      border-radius: 999px;
+      display: inline-block;
+      margin-top: 1rem;
+      transition: background 0.2s;
     }
-    .hero-card p {
-      color: #5a6881;
-      font-size: 1rem;
+    .cta a:hover {
+      background: #e9e9e9;
     }
-    .hero-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 6px 20px rgba(126,211,33,0.11);
+
+    footer {
+      background: var(--dark);
+      color: #fff;
+      text-align: center;
+      padding: 2rem 1rem;
+      margin-top: 4rem;
+    }
+    footer p {
+      margin-bottom: 0.5rem;
     }
   </style>
 </head>
@@ -215,71 +156,32 @@
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="services.html">Services</a></li>
-      <li><a href="#">About</a></li>
       <li><a href="reviews.html">Testimonials</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
-    <a href="#" class="btn-consultation">Book Free Consultation</a>
+    <a href="contact.html" class="btn-consultation">Book Free Consultation</a>
   </nav>
 
-  <section class="hero">
-    <div class="hero-container">
-      <div class="hero-content">
-        <h1>getITfixed</h1>
-        <div class="hero-subtitle">Fast, Safe, Easy Computers for Seniors</div>
-        <div class="hero-description">
-          Plans from $50/month • Gamers: Boost Your PC Today!
-        </div>
-        <div class="hero-buttons">
-          <a href="#" class="btn-primary">Book Free Consultation</a>
-          <a href="#" class="btn-secondary">Get Free PC Safety Checklist</a>
-        </div>
-      </div>
-      <div class="hero-cards">
-        <div class="hero-card">
-          <img src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?w=350&h=180&fit=crop&crop=center" alt="Senior using computer with assistance">
-          <h3>Seniors Love Our Service</h3>
-          <p>Hassle-free maintenance and support with patient, friendly experts who understand your needs.</p>
-        </div>
-        <div class="hero-card">
-          <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?w=350&h=180&fit=crop&crop=center" alt="High-performance gaming computer setup">
-          <h3>Gaming Performance</h3>
-          <p>Custom builds and professional overclocking to maximize your gaming experience.</p>
-        </div>
-      </div>
-    </div>
+  <section class="why-choose">
+    <h2>Why Choose Us?</h2>
+    <ul>
+      <li>Patient, friendly tech support tailored for seniors and non-techies</li>
+      <li>We come to you — in-home help for all your devices</li>
+      <li>Affordable rates with no surprise fees</li>
+      <li>Verified Google and Yelp reviews from real customers</li>
+      <li>Services ranging from Wi-Fi setup to phone upgrades to home security</li>
+    </ul>
   </section>
 
-  <section class="why-choose-us" style="padding: 4rem 2rem; background: var(--gray-bg); text-align: center;">
-    <h2 style="font-size: 2rem; margin-bottom: 2rem;">Why Choose getITfixed?</h2>
-    <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 2rem; max-width: 1000px; margin: 0 auto;">
-      <div style="flex: 1 1 280px; background: #fff; padding: 2rem; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
-        <h3 style="color: var(--accent); font-size: 1.3rem; margin-bottom: 1rem;">Patient, Friendly Techs</h3>
-        <p>We specialize in working with seniors, making tech easier and less stressful for everyone.</p>
-      </div>
-      <div style="flex: 1 1 280px; background: #fff; padding: 2rem; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
-        <h3 style="color: var(--accent); font-size: 1.3rem; margin-bottom: 1rem;">No Geek Speak</h3>
-        <p>We explain everything in plain English and make sure you're confident using your devices.</p>
-      </div>
-      <div style="flex: 1 1 280px; background: #fff; padding: 2rem; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
-        <h3 style="color: var(--accent); font-size: 1.3rem; margin-bottom: 1rem;">Fair Monthly Pricing</h3>
-        <p>No surprise bills. Unlimited tech help starting at just $50/month. Cancel anytime.</p>
-      </div>
-    </div>
+  <section class="cta">
+    <h2>Ready to get started?</h2>
+    <p>Schedule your free in-home consultation today and get your tech running smoothly!</p>
+    <a href="contact.html">Schedule Now</a>
   </section>
 
-  <section class="cta" style="padding: 4rem 2rem; text-align: center;">
-    <h2 style="font-size: 2rem; margin-bottom: 1rem;">Ready to Feel Confident with Tech?</h2>
-    <p style="font-size: 1.1rem; max-width: 600px; margin: 0 auto 2rem;">Join hundreds of happy customers who’ve upgraded their digital lives. We’re here to help every step of the way.</p>
-    <a href="#" class="btn-primary">Get Started Now</a>
-  </section>
-
-  <footer style="background: var(--dark); color: #fff; text-align: center; padding: 2rem; font-size: 0.95rem;">
+  <footer>
     <p>&copy; 2025 getITfixed. All rights reserved.</p>
-    <p><a href="#" style="color: var(--accent); text-decoration: underline;">Privacy Policy</a> | <a href="#" style="color: var(--accent); text-decoration: underline;">Terms of Service</a></p>
+    <p><a href="mailto:support@getitfixed.com" style="color:#7ED321">support@getitfixed.com</a></p>
   </footer>
-
 </body>
 </html>
-
