--- a/index.html
+++ b/index.html
@@ -6,148 +6,49 @@
   <title>getITfixed | Tech Help You Can Trust</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
-    :root {
-      --accent: #7ED321;
-      --dark: #1a2c4a;
-      --gray-bg: #f6f8fb;
-      --card-radius: 16px;
-      --max-width: 1100px;
-    }
+    :root { --accent: #7ED321; --dark: #1a2c4a; --gray-bg: #f6f8fb; --card-radius: 16px; --max-width: 1100px;}
     * { box-sizing: border-box; margin: 0; padding: 0; }
     html, body { height: 100%; }
-    body {
-      font-family: 'Poppins', system-ui, Arial, sans-serif;
-      background: #fff;
-      color: #1a2c4a;
-      min-height: 100vh;
-    }
+    body { font-family: 'Poppins', system-ui, Arial, sans-serif; background: #fff; color: #1a2c4a; min-height: 100vh; }
     a { color: var(--dark); text-decoration: none; }
     a:focus { outline: 2px dashed var(--accent);}
-
     .navbar {
-      background: var(--dark);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 2rem;
-      padding: 0.8rem 2vw;
-      position: sticky; top: 0; z-index: 99;
+      background: var(--dark); color: #fff; display: flex; justify-content: center; align-items: center;
+      flex-wrap: wrap; gap: 2rem; padding: 0.8rem 2vw; position: sticky; top: 0; z-index: 99;
       border-bottom: 1px solid rgba(126,211,33,0.13);
     }
     .logo {
-      font-size: 1.8rem;
-      font-weight: 700;
-      letter-spacing: 1px;
-      display: flex;
-      align-items: center;
+      font-size: 1.8rem; font-weight: 700; letter-spacing: 1px; display: flex; align-items: center;
     }
     .logo::before {
-      content: 'IT';
-      background: var(--accent);
-      color: var(--dark);
-      padding: 0.33rem 0.68rem;
-      border-radius: 8px;
-      margin-right: 0.8rem;
-      font-weight: 700;
-      font-size: 1rem;
-      letter-spacing: 0;
+      content: 'IT'; background: var(--accent); color: var(--dark); padding: 0.33rem 0.68rem;
+      border-radius: 8px; margin-right: 0.8rem; font-weight: 700; font-size: 1rem; letter-spacing: 0;
     }
-    .nav-links {
-      display: flex;
-      gap: 2rem;
-      flex-wrap: wrap;
-      align-items: center;
-      list-style: none;
-    }
-    .nav-links a {
-      color: #fff;
-      font-size: 1.12rem;
-      font-weight: 600;
-      transition: color 0.21s;
-      padding: 0.35em 0.25em;
-    }
+    .nav-links { display: flex; gap: 2rem; flex-wrap: wrap; align-items: center; list-style: none; }
+    .nav-links a { color: #fff; font-size: 1.12rem; font-weight: 600; transition: color 0.21s; padding: 0.35em 0.25em; }
     .nav-links a.active,
     .nav-links a:hover { color: var(--accent); }
     .btn-consultation {
-      background: var(--accent);
-      color: var(--dark);
-      padding: 0.9rem 2.2rem;
-      font-size: 1.08rem;
-      border-radius: 999px;
-      font-weight: 700;
-      margin-left: 1.7vw;
+      background: var(--accent); color: var(--dark); padding: 0.9rem 2.2rem; font-size: 1.08rem;
+      border-radius: 999px; font-weight: 700; margin-left: 1.7vw;
       box-shadow: 0 2px 12px rgba(126,211,33,0.18);
-      transition: background 0.18s,transform 0.18s;
-      display: inline-block;
+      transition: background 0.18s,transform 0.18s; display: inline-block;
     }
-    .btn-consultation:hover {
-      background: #6bc419;
-      transform: translateY(-1.5px);
-      color: #fff;
-    }
-
-    section {
-      max-width: var(--max-width);
-      margin: 4rem auto;
-      padding: 0 1rem;
-    }
-
-    .why-choose {
-      background-color: var(--gray-bg);
-      border-radius: var(--card-radius);
-      padding: 2rem;
-    }
-    .why-choose h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: var(--dark);
-    }
-    .why-choose ul {
-      list-style: disc;
-      padding-left: 1.5rem;
-    }
-    .why-choose li {
-      margin-bottom: 0.75rem;
-      font-size: 1.1rem;
-    }
-
-    .cta {
-      text-align: center;
-      padding: 3rem 1rem;
-      background: var(--accent);
-      color: #fff;
-      border-radius: var(--card-radius);
-    }
-    .cta h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
+    .btn-consultation:hover { background: #6bc419; transform: translateY(-1.5px); color: #fff; }
+    section { max-width: var(--max-width); margin: 4rem auto; padding: 0 1rem; }
+    .why-choose { background-color: var(--gray-bg); border-radius: var(--card-radius); padding: 2rem; }
+    .why-choose h2 { font-size: 2rem; margin-bottom: 1rem; color: var(--dark);}
+    .why-choose ul { list-style: disc; padding-left: 1.5rem;}
+    .why-choose li { margin-bottom: 0.75rem; font-size: 1.1rem;}
+    .cta { text-align: center; padding: 3rem 1rem; background: var(--accent); color: #fff; border-radius: var(--card-radius);}
+    .cta h2 { font-size: 2rem; margin-bottom: 1rem; }
     .cta a {
-      background: #fff;
-      color: var(--dark);
-      font-weight: 600;
-      padding: 0.75rem 2rem;
-      border-radius: 999px;
-      display: inline-block;
-      margin-top: 1rem;
-      transition: background 0.2s;
+      background: #fff; color: var(--dark); font-weight: 600; padding: 0.75rem 2rem;
+      border-radius: 999px; display: inline-block; margin-top: 1rem; transition: background 0.2s;
     }
-    .cta a:hover {
-      background: #e9e9e9;
-    }
-
-    footer {
-      background: var(--dark);
-      color: #fff;
-      text-align: center;
-      padding: 2rem 1rem;
-      margin-top: 4rem;
-    }
-    footer p {
-      margin-bottom: 0.5rem;
-    }
+    .cta a:hover { background: #e9e9e9; }
+    footer { background: var(--dark); color: #fff; text-align: center; padding: 2rem 1rem; margin-top: 4rem; }
+    footer p { margin-bottom: 0.5rem; }
   </style>
 </head>
 <body>
@@ -161,7 +62,6 @@
     </ul>
     <a href="contact.html" class="btn-consultation">Book Free Consultation</a>
   </nav>
-
   <section class="why-choose">
     <h2>Why Choose Us?</h2>
     <ul>
@@ -172,13 +72,11 @@
       <li>Services ranging from Wi-Fi setup to phone upgrades to home security</li>
     </ul>
   </section>
-
   <section class="cta">
     <h2>Ready to get started?</h2>
     <p>Schedule your free in-home consultation today and get your tech running smoothly!</p>
     <a href="contact.html">Schedule Now</a>
   </section>
-
   <footer>
     <p>&copy; 2025 getITfixed. All rights reserved.</p>
     <p><a href="mailto:support@getitfixed.com" style="color:#7ED321">support@getitfixed.com</a></p>
