--- a/reviews.html
+++ b/reviews.html
@@ -2,91 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Customer Reviews | getITfixed</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Testimonials | getITfixed</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; }
-    body { background: #f5f7fa; color: #222; line-height: 1.6; }
-    header { background: #111827; color: white; padding: 1.5rem 2rem; display: flex; justify-content: space-between; align-items: center; }
-    header h1 { font-size: 1.5rem; }
-    nav a { color: white; text-decoration: none; margin-left: 1.5rem; font-weight: 600; }
-    .container { max-width: 1000px; margin: 2rem auto; padding: 0 1.5rem; }
-    .section-title { font-size: 2rem; font-weight: 700; text-align: center; margin-bottom: 2rem; }
-    .review-card { background: white; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); padding: 1.5rem; margin-bottom: 1.5rem; transition: transform 0.2s ease; }
-    .review-card:hover { transform: translateY(-4px); box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
-    .review-card h3 { margin-bottom: 0.25rem; }
-    .stars { color: #fbbf24; margin-bottom: 0.75rem; }
-    a.review-link { text-decoration: none; color: inherit; display: block; }
-    footer { background: #111827; color: white; text-align: center; padding: 1rem 0; margin-top: 3rem; }
+    :root { --accent: #7ED321; --dark: #1a2c4a; --gray-bg: #f6f8fb; --card-radius: 16px; --max-width: 1100px;}
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body { height: 100%; }
+    body { font-family: 'Poppins', system-ui, Arial, sans-serif; background: #fff; color: #1a2c4a; min-height: 100vh; }
+    a { color: var(--dark); text-decoration: none; }
+    a:focus { outline: 2px dashed var(--accent);}
+    .navbar {
+      background: var(--dark); color: #fff; display: flex; justify-content: center; align-items: center;
+      flex-wrap: wrap; gap: 2rem; padding: 0.8rem 2vw; position: sticky; top: 0; z-index: 99;
+      border-bottom: 1px solid rgba(126,211,33,0.13);
+    }
+    .logo {
+      font-size: 1.8rem; font-weight: 700; letter-spacing: 1px; display: flex; align-items: center;
+    }
+    .logo::before {
+      content: 'IT'; background: var(--accent); color: var(--dark); padding: 0.33rem 0.68rem;
+      border-radius: 8px; margin-right: 0.8rem; font-weight: 700; font-size: 1rem; letter-spacing: 0;
+    }
+    .nav-links { display: flex; gap: 2rem; flex-wrap: wrap; align-items: center; list-style: none; }
+    .nav-links a { color: #fff; font-size: 1.12rem; font-weight: 600; transition: color 0.21s; padding: 0.35em 0.25em; }
+    .nav-links a.active,
+    .nav-links a:hover { color: var(--accent); }
+    .btn-consultation {
+      background: var(--accent); color: var(--dark); padding: 0.9rem 2.2rem; font-size: 1.08rem;
+      border-radius: 999px; font-weight: 700; margin-left: 1.7vw;
+      box-shadow: 0 2px 12px rgba(126,211,33,0.18);
+      transition: background 0.18s,transform 0.18s; display: inline-block;
+    }
+    .btn-consultation:hover { background: #6bc419; transform: translateY(-1.5px); color: #fff; }
+    section { max-width: var(--max-width); margin: 4rem auto; padding: 0 1rem; }
+    .reviews { background: var(--gray-bg); border-radius: var(--card-radius); padding: 2rem;}
+    .reviews h2 { font-size: 2rem; margin-bottom: 1rem; color: var(--dark);}
+    .testimonial {
+      margin-bottom: 1.5rem;
+      padding: 1rem 0.7rem;
+      border-left: 4px solid var(--accent);
+      background: #fff;
+      border-radius: 6px;
+      box-shadow: 0 1.5px 9px rgba(126,211,33,0.02);
+    }
+    .testimonial strong { color: var(--dark); }
+    footer { background: var(--dark); color: #fff; text-align: center; padding: 2rem 1rem; margin-top: 4rem; }
+    footer p { margin-bottom: 0.5rem; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>getITfixed</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="reviews.html">Reviews</a>
-    </nav>
-  </header>
-
-  <div class="container">
-    <h2 class="section-title">What Our Customers Say</h2>
-
-    <a class="review-link" href="https://www.yelp.com/biz/getitfixed-phoenix" target="_blank">
-      <div class="review-card">
-        <h3>Linda R. <span style="font-size: 0.85rem; color: #888;">(Yelp)</span></h3>
-        <p class="stars">★★★★★</p>
-        <p>"They set up my Wi-Fi and security system. Super patient and explained everything! Highly recommend for seniors like me."</p>
-      </div>
-    </a>
-
-    <a class="review-link" href="https://g.page/r/CU0-EXAMPLE-URL" target="_blank">
-      <div class="review-card">
-        <h3>Mark D. <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
-        <p class="stars">★★★★★</p>
-        <p>"Fast, friendly, and fixed my phone in under 15 minutes. Great value and service!"</p>
-      </div>
-    </a>
-
-    <a class="review-link" href="https://www.yelp.com/biz/getitfixed-mesa" target="_blank">
-      <div class="review-card">
-        <h3>Sarah T. <span style="font-size: 0.85rem; color: #888;">(Yelp)</span></h3>
-        <p class="stars">★★★★★</p>
-        <p>"They helped upgrade my parents' phones and set up their home devices. Very professional and trustworthy team."</p>
-      </div>
-    </a>
-
-    <a class="review-link" href="https://g.co/kgs/XCHEhM4" target="_blank">
-      <div class="review-card">
-        <h3>Antonio Gonzalez <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
-        <p class="stars">★★★★★</p>
-        <p>"I recently had the pleasure of using GetItFixed IT Services, and I can't recommend them highly enough! We were facing a significant issue with a stubborn printer... Dominic quickly assessed the situation and got to work. Not only did he fix it fast, but he also offered a very reasonable price. Thanks to Dominic, our office is back on track!"</p>
-      </div>
-    </a>
-
-    <a class="review-link" href="https://g.co/kgs/Fy9Vupa" target="_blank">
-      <div class="review-card">
-        <h3>Analeigha Quintino-Zavala <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
-        <p class="stars">★★★★★</p>
-        <p>"I had an issue with my laptop running extremely slowww, and Dominic got it back to running so fast in no time! Dominic was knowledgeable, professional, and explained everything in a way I could understand. The pricing was fair, and the service was top-notch. Highly recommend!"</p>
-      </div>
-    </a>
-
-    <a class="review-link" href="https://g.co/kgs/Vut4gsG" target="_blank">
-      <div class="review-card">
-        <h3>Annie M <span style="font-size: 0.85rem; color: #888;">(Google)</span></h3>
-        <p class="stars">★★★★★</p>
-        <p>"Dominic came to the house the same day my husband called. He diagnosed the issue on our PC, took it with him for the actual repair and had it back to us the next day. I can’t express enough how polite, professional and knowledgeable he is. His price is beyond fair. And to top it off he helped go after our husky when he escaped!"</p>
-      </div>
-    </a>
-
-  </div>
-
+  <nav class="navbar">
+    <div class="logo">getITfixed</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="reviews.html" class="active">Testimonials</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <a href="contact.html" class="btn-consultation">Book Free Consultation</a>
+  </nav>
+  <section class="reviews">
+    <h2>Customer Testimonials</h2>
+    <div class="testimonial">
+      “Amazing service! Patient and explained everything so my mom could understand.”<br>
+      <strong>— Jennifer L.</strong>
+    </div>
+    <div class="testimonial">
+      “Prompt, reliable, and honest about what work was needed.”<br>
+      <strong>— Robert M.</strong>
+    </div>
+    <div class="testimonial">
+      “Fixed my Wi-Fi and showed me how to use my new phone. Highly recommended.”<br>
+      <strong>— Linda S.</strong>
+    </div>
+  </section>
   <footer>
-    <p>&copy; 2025 getITfixed — All rights reserved.</p>
+    <p>&copy; 2025 getITfixed. All rights reserved.</p>
+    <p><a href="mailto:support@getitfixed.com" style="color:#7ED321">support@getitfixed.com</a></p>
   </footer>
 </body>
 </html>
-
