--- a/services.html
+++ b/services.html
@@ -80,6 +80,7 @@
       font-weight: 600;
       font-size: 1.1rem;
       transition: all 0.3s ease;
+      cursor: pointer;
     }
 
     .btn-consultation:hover {
