--- a/services.html
+++ b/services.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>getITfixed | Tech Help You Can Trust</title>
+  <title>Services | getITfixed</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <style>
+     /* Same styles as index.html — keep consistent */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
     body {
       font-family: 'Poppins', system-ui, -apple-system, sans-serif;
       background: #ffffff;
@@ -19,8 +19,6 @@
       line-height: 1.7;
       font-size: 16px;
     }
-
-    /* Navigation */
     .navbar {
       background: #1a2c4a;
       padding: 1rem 2rem;
@@ -32,7 +30,6 @@
       z-index: 100;
       border-bottom: 1px solid rgba(255,255,255,0.1);
     }
-
     .logo {
       display: flex;
       align-items: center;
@@ -40,7 +37,6 @@
       font-weight: 700;
       color: #ffffff;
     }
-
     .logo::before {
       content: 'IT';
       background: #7ED321;
@@ -51,13 +47,11 @@
       font-weight: 700;
       font-size: 1rem;
     }
-
     .nav-links {
       display: flex;
       list-style: none;
       gap: 2.5rem;
     }
-
     .nav-links a {
       color: #ffffff;
       text-decoration: none;
@@ -65,12 +59,10 @@
       font-size: 1.1rem;
       transition: color 0.3s ease;
     }
-
     .nav-links a:hover,
     .nav-links a.active {
       color: #7ED321;
     }
-
     .btn-consultation {
       background: #7ED321;
       color: #1a2c4a;
@@ -82,20 +74,16 @@
       transition: all 0.3s ease;
       cursor: pointer;
     }
-
     .btn-consultation:hover {
       background: #6BC419;
       transform: translateY(-1px);
       box-shadow: 0 4px 12px rgba(126, 211, 33, 0.3);
     }
-
-    /* Content Section */
     section {
       max-width: 1100px;
       margin: 4rem auto;
       padding: 0 1rem;
     }
-
     h2 {
       font-size: 2.5rem;
       color: #1a2c4a;
@@ -103,7 +91,6 @@
       font-weight: 700;
       text-align: center;
     }
-
     ul {
       list-style: disc inside;
       font-size: 1.2rem;
@@ -111,19 +98,15 @@
       max-width: 700px;
       margin: 0 auto;
     }
-
     ul li {
       margin-bottom: 1rem;
     }
-
-    /* Footer */
     .footer {
       background: #1a2c4a;
       padding: 4rem 2rem 2rem;
       border-top: 1px solid rgba(255,255,255,0.1);
       color: #b8c5d1;
     }
-
     .footer-content {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -131,33 +114,27 @@
       max-width: 1200px;
       margin: 0 auto;
     }
-
     .footer-section h3 {
       font-size: 1.3rem;
       font-weight: 600;
       margin-bottom: 1.5rem;
       color: #ffffff;
     }
-
     .footer-section ul {
       list-style: none;
     }
-
     .footer-section ul li {
       margin-bottom: 0.8rem;
     }
-
     .footer-section ul li a {
       color: #b8c5d1;
       text-decoration: none;
       font-size: 1.1rem;
       transition: color 0.3s ease;
     }
-
     .footer-section ul li a:hover {
       color: #7ED321;
     }
-
     .footer-bottom {
       text-align: center;
       margin-top: 3rem;
@@ -166,15 +143,12 @@
       color: #b8c5d1;
       font-size: 1rem;
     }
-
-    /* Responsive */
     @media (max-width: 768px) {
       .navbar {
         flex-direction: column;
         gap: 1.5rem;
         padding: 1.5rem;
       }
-
       .nav-links {
         gap: 1.5rem;
       }
@@ -182,6 +156,7 @@
   </style>
 </head>
 <body>
+
   <!-- Navigation -->
   <nav class="navbar">
     <div class="logo">getITfixed</div>
@@ -210,9 +185,7 @@
     <div class="footer-content">
       <div class="footer-section">
         <div class="logo">getITfixed</div>
-        <p>
-          Your trusted local expert for computer repairs, upgrades, and support.
-        </p>
+        <p>Your trusted local expert for computer repairs, upgrades, and support.</p>
       </div>
       <div class="footer-section">
         <h3>Quick Links</h3>
@@ -245,5 +218,6 @@
       <p>© 2024 getITfixed. All rights reserved. • 100% Satisfaction Guarantee • Local & Trusted • 5-Star Service</p>
     </div>
   </footer>
+
 </body>
 </html>
