--- a/index.html
+++ b/index.html
@@ -4,245 +4,164 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>getITfixed | Tech Help You Can Trust</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
-    /* Reset and base styles */
+    :root {
+      --accent: #7ED321;
+      --dark: #1a2c4a;
+      --gray-bg: #f6f8fb;
+      --card-radius: 16px;
+      --max-width: 1100px;
+    }
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
+    }
+    html, body {
+      height: 100%;
     }
     body {
-      font-family: 'Poppins', system-ui, -apple-system, sans-serif;
-      background: #ffffff;
-      color: #2c3e50;
-      line-height: 1.7;
-      font-size: 16px;
+      font-family: 'Poppins', system-ui, Arial, sans-serif;
+      background: #fff;
+      color: var(--dark);
+      min-height: 100vh;
+      line-height: 1.6;
     }
-    /* Navigation */
+    a {
+      color: var(--dark);
+      text-decoration: none;
+    }
+    a:focus {
+      outline: 2px dashed var(--accent);
+    }
     .navbar {
-      background: #1a2c4a;
-      padding: 1rem 2rem;
+      background: var(--dark);
+      color: #fff;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
+      flex-wrap: wrap;
+      gap: 2rem;
+      padding: 0.8rem 2vw;
       position: sticky;
       top: 0;
-      z-index: 100;
-      border-bottom: 1px solid rgba(255,255,255,0.1);
+      z-index: 99;
+      border-bottom: 1px solid rgba(126,211,33,0.13);
     }
     .logo {
+      font-size: 1.8rem;
+      font-weight: 700;
+      letter-spacing: 1px;
       display: flex;
       align-items: center;
-      font-size: 1.4rem;
-      font-weight: 700;
-      color: #ffffff;
     }
     .logo::before {
       content: 'IT';
-      background: #7ED321;
-      color: #1a2c4a;
-      padding: 0.4rem 0.6rem;
-      border-radius: 6px;
-      margin-right: 0.7rem;
+      background: var(--accent);
+      color: var(--dark);
+      padding: 0.33rem 0.68rem;
+      border-radius: 8px;
+      margin-right: 0.8rem;
       font-weight: 700;
       font-size: 1rem;
+      letter-spacing: 0;
     }
     .nav-links {
       display: flex;
+      gap: 2rem;
+      flex-wrap: wrap;
+      align-items: center;
       list-style: none;
-      gap: 2.5rem;
     }
     .nav-links a {
-      color: #ffffff;
-      text-decoration: none;
+      color: #fff;
+      font-size: 1.12rem;
       font-weight: 600;
-      font-size: 1.1rem;
-      transition: color 0.3s ease;
+      transition: color 0.21s;
+      padding: 0.35em 0.25em;
     }
-    .nav-links a:hover,
-    .nav-links a.active {
-      color: #7ED321;
+    .nav-links a.active,
+    .nav-links a:hover {
+      color: var(--accent);
     }
     .btn-consultation {
-      background: #7ED321;
-      color: #1a2c4a;
-      padding: 0.8rem 1.8rem;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 1.1rem;
-      transition: all 0.3s ease;
-      cursor: pointer;
-    }
-    .btn-consultation:hover {
-      background: #6BC419;
-      transform: translateY(-1px);
-      box-shadow: 0 4px 12px rgba(126, 211, 33, 0.3);
-    }
-    /* Hero Section */
-    .hero {
-      background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-      padding: 5rem 2rem;
-      min-height: 85vh;
-    }
-    .hero-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 4rem;
-      height: 100%;
-    }
-    .hero-content {
-      flex: 1;
-      max-width: 600px;
-    }
-    .hero h1 {
-      font-size: 4rem;
+      background: var(--accent);
+      color: var(--dark);
+      padding: 0.9rem 2.2rem;
+      font-size: 1.08rem;
+      border-radius: 999px;
       font-weight: 700;
-      margin-bottom: 1.5rem;
-      line-height: 1.1;
-      color: #1a2c4a;
-    }
-    .hero-subtitle {
-      color: #7ED321;
-      font-size: 1.8rem;
-      font-weight: 600;
-      margin-bottom: 2rem;
-    }
-    .hero-description {
-      font-size: 1.3rem;
-      color: #495057;
-      margin-bottom: 2.5rem;
-      font-weight: 400;
-    }
-    .hero-buttons {
-      display: flex;
-      gap: 1.5rem;
-      flex-wrap: wrap;
-    }
-    .btn-primary {
-      background: #7ED321;
-      color: #1a2c4a;
-      padding: 1rem 2.5rem;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 1.2rem;
-      transition: all 0.3s ease;
-      border: none;
-      cursor: pointer;
+      margin-left: 1.7vw;
+      box-shadow: 0 2px 12px rgba(126,211,33,0.18);
+      transition: background 0.18s, transform 0.18s;
       display: inline-block;
     }
-    .btn-primary:hover {
-      background: #6BC419;
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(126, 211, 33, 0.3);
+    .btn-consultation:hover {
+      background: #6bc419;
+      transform: translateY(-1.5px);
+      color: #fff;
     }
-    .btn-secondary {
-      background: transparent;
-      color: #7ED321;
-      padding: 1rem 2.5rem;
-      border: 2px solid #7ED321;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 1.2rem;
-      transition: all 0.3s ease;
-      cursor: pointer;
+    section {
+      max-width: var(--max-width);
+      margin: 4rem auto;
+      padding: 0 1rem;
     }
-    .btn-secondary:hover {
-      background: #7ED321;
-      color: #ffffff;
-    }
-    .hero-cards {
-      display: flex;
-      gap: 1.5rem;
-      flex-direction: column;
-      flex-shrink: 0;
-    }
-    .hero-card {
-      background: #ffffff;
-      border: 1px solid #e9ecef;
-      border-radius: 12px;
+    .why-choose {
+      background-color: var(--gray-bg);
+      border-radius: var(--card-radius);
       padding: 2rem;
-      width: 350px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
     }
-    .hero-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+    .why-choose h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: var(--dark);
     }
-    .hero-card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 1.5rem;
+    .why-choose ul {
+      list-style: disc;
+      padding-left: 1.5rem;
     }
-    .hero-card h3 {
-      font-size: 1.3rem;
-      font-weight: 600;
-      margin-bottom: 0.8rem;
-      color: #1a2c4a;
-    }
-    .hero-card p {
-      color: #6c757d;
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-    /* Other sections omitted for brevity, keep your existing content */
-    
-    /* Footer */
-    .footer {
-      background: #1a2c4a;
-      padding: 4rem 2rem 2rem;
-      border-top: 1px solid rgba(255,255,255,0.1);
-    }
-    .footer-content {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 3rem;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .footer-section h3 {
-      font-size: 1.3rem;
-      font-weight: 600;
-      margin-bottom: 1.5rem;
-      color: #ffffff;
-    }
-    .footer-section ul {
-      list-style: none;
-    }
-    .footer-section ul li {
-      margin-bottom: 0.8rem;
-    }
-    .footer-section ul li a {
-      color: #b8c5d1;
-      text-decoration: none;
+    .why-choose li {
+      margin-bottom: 0.75rem;
       font-size: 1.1rem;
-      transition: color 0.3s ease;
     }
-    .footer-section ul li a:hover {
-      color: #7ED321;
-    }
-    .footer-bottom {
+    .cta {
       text-align: center;
-      margin-top: 3rem;
-      padding-top: 2rem;
-      border-top: 1px solid rgba(255,255,255,0.1);
-      color: #b8c5d1;
-      font-size: 1rem;
+      padding: 3rem 1rem;
+      background: var(--accent);
+      color: #fff;
+      border-radius: var(--card-radius);
+    }
+    .cta h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .cta a {
+      background: #fff;
+      color: var(--dark);
+      font-weight: 600;
+      padding: 0.75rem 2rem;
+      border-radius: 999px;
+      display: inline-block;
+      margin-top: 1rem;
+      transition: background 0.2s;
+    }
+    .cta a:hover {
+      background: #e9e9e9;
+    }
+    footer {
+      background: var(--dark);
+      color: #fff;
+      text-align: center;
+      padding: 2rem 1rem;
+      margin-top: 4rem;
+    }
+    footer p {
+      margin-bottom: 0.5rem;
     }
   </style>
 </head>
 <body>
-
-  <!-- Navigation -->
   <nav class="navbar">
     <div class="logo">getITfixed</div>
     <ul class="nav-links">
@@ -253,48 +172,26 @@
     </ul>
     <a href="contact.html" class="btn-consultation">Book Free Consultation</a>
   </nav>
-  
-  <!-- Your homepage content here -->
-  <!-- Keep your existing hero, about, mission, why choose, CTA, etc. -->
-  
-  <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-section">
-        <div class="logo">getITfixed</div>
-        <p>Your trusted local expert for computer repairs, upgrades, and support.</p>
-      </div>
-      <div class="footer-section">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="reviews.html">Testimonials</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h3>Services</h3>
-        <ul>
-          <li><a href="plans.html">Senior Maintenance Plans</a></li>
-          <li><a href="performance.html">Gaming PC Builds</a></li>
-          <li><a href="upgrades.html">Overclocking & Upgrades</a></li>
-          <li><a href="training.html">Tech Training</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h3>Contact</h3>
-        <ul>
-          <li><a href="tel:5551234567">(555) 123-4567</a></li>
-          <li><a href="mailto:info@getitfixed.com">info@getitfixed.com</a></li>
-          <li>Your City, State</li>
-        </ul>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p>© 2024 getITfixed. All rights reserved. • 100% Satisfaction Guarantee • Local & Trusted • 5-Star Service</p>
-    </div>
+  <section class="why-choose">
+    <h2>Why Choose Us?</h2>
+    <ul>
+      <li>Patient, friendly tech support tailored for seniors and non-techies</li>
+      <li>We come to you — in-home help for all your devices</li>
+      <li>Affordable rates with no surprise fees</li>
+      <li>Verified Google and Yelp reviews from real customers</li>
+      <li>Services ranging from Wi-Fi setup to phone upgrades to home security</li>
+    </ul>
+  </section>
+  <section class="cta">
+    <h2>Ready to get started?</h2>
+    <p>Schedule your free in-home consultation today and get your tech running smoothly!</p>
+    <a href="contact.html">Schedule Now</a>
+  </section>
+  <footer>
+    <p>&copy; 2025 getITfixed. All rights reserved.</p>
+    <p><a href="mailto:support@getitfixed.com" style="color:#7ED321">support@getitfixed.com</a></p>
   </footer>
-
 </body>
 </html>
+
 
